--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,6 +6,9 @@ body{
     background-image: url(/images/deporte.jpg?0b6ba8e47cfb2932416f613eba76cf95);
     background-size: 50%;
 }
+.black{
+  background-image: url(../images/fondo.jpg);
+}
 .container{
 max-width: 450px;
 height: auto;
@@ -67,12 +70,17 @@ color: whitesmoke;
 body{
     background-image: url(/images/imagen.jpg?18d32aec8193681ca9a8dfdbc87abef7);
 background-size: 50%;
-}
+transition:.40s; background: #EEEEEE; color: black}
+
+.black{background-image:url(/public/images/oscuro.jpg); color:black;}
+
+button{margin: 5px; border: 0px; padding: 5px; cursor: pointer;}
+
 .container{
     background-color:#359eff;
     opacity: 0.9;
     position: relative;
-    width: 70%;
+    width: 60%;
 }
 .form_top{
     text-align: center;
@@ -90,6 +98,125 @@ background-size: 50%;
     margin: 1%;
     padding: 2%;
 }
+
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+ul,ol{
+	list-style: none;
+}
+
+body{
+	font-family: Open sans;
+}
+
+.slideshow{
+	width: 100%;
+	position: relative;
+}
+
+.slider li, ul{
+	width: 100%;
+}
+
+.slider li{
+	overflow: hidden;
+}
+
+.slider li img{
+	width: 70%;
+}
+
+.slider .caption{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	padding: 15px 50px;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	text-align: center;
+	color: #fff;
+	z-index: 1;
+}
+
+.slider .caption h1{
+	font-size: 50px;
+}
+
+.slider .caption p{
+	margin-top: 10px;
+	font-size: 20px;
+}
+
+.pagination{
+	position: absolute;
+	top: 102%;
+	width: 100%;
+
+	display: flex;
+	justify-content: center;
+}
+
+.pagination li{
+	font-size: 20px;
+	margin: 2px 5px;
+	color: #858585;
+	cursor: pointer;
+}
+
+.left, .right{
+	position: absolute;
+	top: 0;
+	height: 100%;
+
+	display: flex;
+	align-items: center;
+
+	color: #fff;
+	font-size: 35px;
+	cursor: pointer;
+	z-index: 2;
+}
+
+.left{
+	left: 10px;
+}
+
+.right{
+	right: 10px;
+}
+
+
+@media screen and (max-width: 600px){
+	.slider .caption p{
+		display: none;
+	}
+
+	.slider .caption h1{
+		font-size: 35px;
+	}
+
+	.left, .right{
+		font-size: 30px;
+	}
+
+	.slider li img{
+		width: 400px;
+	}
+
+	.pagination{
+		display: none;
+	}
+}
 body{
   background-image: url(/images/imagen.jpg?18d32aec8193681ca9a8dfdbc87abef7);
 }
@@ -106,7 +233,6 @@ footer{
 .container-fluid h1{
   font-size: 50px;
 }
-@charset "UTF-8";
 
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
