--- a/resources/sass/trabajo.css
+++ b/resources/sass/trabajo.css
@@ -1,6 +1,11 @@
 body{
   background-image: url(../images/imagen.jpg);
 }
+
+.black{
+  background-image: url(../images/fondo.jpg);
+}
+
 html{
   font-size: 16px;
 font-family: 'Lato', sans-serif;
