--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,14 @@
+*{
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
 body{
     background-image: url(../images/imagen.jpg);
-background-size: 40%;
+	background-size: 40%;
+	font-family: Open sans;
 }
 .black{
 	background-image: url(../images/dark.png);
@@ -9,12 +17,28 @@ background-size: 40%;
 .titulo{
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-button{margin: 5px; border: 0px; padding: 5px; cursor: pointer;}
-
+.btn-warning{
+	color:#359eff;
+}
+button{
+	margin: 5px; border: 0px; padding: 5px; cursor: pointer;
+}
+.txt{
+	padding-left: 10px;
+	margin-left: 15px;
+	width: 220px;
+}
+.categoria{
+	color: black;
+	font-size: 22px;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	margin-right: 20px;
+	text-align: center;
+}
 .container{
     background-color:#359eff;
-    opacity: 0.9;
-    position: relative;
+	position: relative;
+	opacity: 0.9;
     width: 60%;
 }
 .form_top{
@@ -33,124 +57,6 @@ button{margin: 5px; border: 0px; padding: 5px; cursor: pointer;}
     margin: 1%;
     padding: 2%;
 }
-
-*{
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-
 ul,ol{
 	list-style: none;
-}
-
-body{
-	font-family: Open sans;
-}
-
-.slideshow{
-	width: 100%;
-	position: relative;
-}
-
-.slider li, ul{
-	width: 100%;
-}
-
-.slider li{
-	overflow: hidden;
-}
-
-.slider li img{
-	width: 70%;
-}
-
-.slider .caption{
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	padding: 15px 50px;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-
-	text-align: center;
-	color: #fff;
-	z-index: 1;
-}
-
-.slider .caption h1{
-	font-size: 50px;
-}
-
-.slider .caption p{
-	margin-top: 10px;
-	font-size: 20px;
-}
-
-.pagination{
-	position: absolute;
-	top: 102%;
-	width: 100%;
-
-	display: flex;
-	justify-content: center;
-}
-
-.pagination li{
-	font-size: 20px;
-	margin: 2px 5px;
-	color: #858585;
-	cursor: pointer;
-}
-
-.left, .right{
-	position: absolute;
-	top: 0;
-	height: 100%;
-
-	display: flex;
-	align-items: center;
-
-	color: #fff;
-	font-size: 35px;
-	cursor: pointer;
-	z-index: 2;
-}
-
-.left{
-	left: 10px;
-}
-
-.right{
-	right: 10px;
-}
-
-
-@media screen and (max-width: 600px){
-	.slider .caption p{
-		display: none;
-	}
-
-	.slider .caption h1{
-		font-size: 35px;
-	}
-
-	.left, .right{
-		font-size: 30px;
-	}
-
-	.slider li img{
-		width: 400px;
-	}
-
-	.pagination{
-		display: none;
-	}
 }
